flex/06-flex-layout/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

body {
  height: 100vh;
  margin: 0;
  overflow: hidden;
  font-family: Roboto, sans-serif;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

img {
  width: 600px;
}

button {
  font-family: Roboto, sans-serif;
  border: none;
  border-radius: 8px;
  background: #eee;
  padding: 10px;
}

input {
  border: 1px solid #ddd;
  border-radius: 16px;
  padding: 8px 24px;
  width: 400px;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
}

.header, .footer{
  display: flex;
  justify-content: space-between;
}

.footer {
  background-color: #eeeeee;
}

.left-links, .right-links {
  display: flex;
  padding: 10px;
  gap: 10px;
}

.content {
  display: flex;
  flex-direction: column;
  align-self: center;
}

.buttons {
  display: flex;
  gap: 10px;
  justify-content: center;
}

